[package]
edition = "2024"
name = "adafruit_magtag_esp_hal_epd"
rust-version = "1.88"
version = "0.1.0"

[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32s2"] }
esp-hal = { version = "=1.0.0-rc.1", features = ["unstable", "esp32s2"] }

critical-section = "1.2.0"
esp-backtrace = { version = "0.18.0", features = [
    "esp32s2",
    "println",
    "panic-handler",
] }
esp-println = { version = "0.16.0", features = ["esp32s2", "log-04"] }
ssd1680 = {path="../../"}
embedded-graphics = "0.8.1"
embedded-hal-bus = "0.3.0"
log = "0.4.28"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"
debug = 2

[profile.dev.package."*"]
debug = false

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
